# 4dgs-to-sbpm

./: .gitignore  README.md  pyproject.toml
configs/: dataset.yaml  export.yaml  sync.yaml  train.yaml
data/: README.md
data/calibration/: example_cameras.json
docs/: README_export.md  README_sync.md  README_train.md  dataset_format.md
firmware/wand_led/: README.md  wand_led.ino
scripts/: build_dataset.py  compare_derivatives.py  export_trajectories.py  run_led_detection.py  run_sync_estimation.py  train_dynamic_gs.py  visualize_motion.py
src/face_mc_gs/: __init__.py  config_util.py
src/face_mc_gs/analysis/: __init__.py  plotting.py
src/face_mc_gs/calibration/: __init__.py  load.py
src/face_mc_gs/cli/: build_dataset.py  compare_derivatives.py  export_trajectories.py  run_led_detection.py  run_sync_estimation.py  train_dynamic_gs.py  visualize_motion.py
src/face_mc_gs/data/: __init__.py  builder.py
src/face_mc_gs/dynamic_gs/: __init__.py  dataset_manifest.py  deformation.py  gaussian_model.py  losses.py  neighbor_graph.py  renderer_gsplat.py  renderer_simple.py  trainer.py
src/face_mc_gs/export/: __init__.py  trajectory.py
src/face_mc_gs/geometry/: __init__.py  camera.py  lie.py  reprojection.py  triangulation.py
src/face_mc_gs/sync/: __init__.py  coarse_sync.py  led_detector.py  pipeline.py  refine_sync.py
tests/: test_deformation_derivatives.py  test_led_detector_synthetic.py  test_reprojection.py  test_sync_synthetic.py  test_triangulation.py
web/: README.md  index.html
